test/extension/ProblemDiagnostic/mocks/build_log_with_macro_errors.txt

SwiftEmitModule normal arm64 Emitting\ module\ for\ Completion (in target 'Completion' from project 'AdidasAppSuite')
EmitSwiftModule normal arm64 (in target 'Completion' from project 'AdidasAppSuite')
    cd /Users/Ievgenii_Mykhalevskyi/repos/source1
    
@__swiftmacro_20Completion07ProfileB0V4Core7ReducerfMe_.swift:1:58: error: conformance of 'ProfileCompletion.Core' to protocol 'Reducer' crosses into main actor-isolated code and can cause data races
extension ProfileCompletion.Core: ComposableArchitecture.Reducer {
                                                         ^
/Users/Ievgenii_Mykhalevskyi/repos/source1/Experiences/Completion/Sources/UI/Scenes/Composition/ProfileCompletionReducer.swift:10:5: note: in expansion of macro 'Reducer' on struct 'Core' here
    @Reducer
    ^~~~~~~~
/Users/Ievgenii_Mykhalevskyi/repos/source1/Experiences/Completion/Sources/UI/Scenes/Composition/ProfileCompletionReducer.swift:10:5: note: in expansion of macro 'Reducer' on struct 'Core' here
    @Reducer
    ^~~~~~~~
@__swiftmacro_20Completion07ProfileB0V4Core7ReducerfMe_.swift:1:58: note: isolate this conformance to the main actor with '@MainActor'
extension ProfileCompletion.Core: ComposableArchitecture.Reducer {
                                                         ^
/Users/Ievgenii_Mykhalevskyi/repos/source1/Experiences/Completion/Sources/UI/Scenes/Composition/ProfileCompletionReducer.swift:10:5: note: in expansion of macro 'Reducer' on struct 'Core' here
    @Reducer
    ^~~~~~~~
/Users/Ievgenii_Mykhalevskyi/repos/source1/Experiences/Completion/Sources/UI/Scenes/Composition/ProfileCompletionReducer.swift:10:5: note: in expansion of macro 'Reducer' on struct 'Core' here
    @Reducer
    ^~~~~~~~
@__swiftmacro_20Completion07ProfileB0V4Core7ReducerfMe_.swift:1:58: note: turn data races into runtime errors with '@preconcurrency'
extension ProfileCompletion.Core: ComposableArchitecture.Reducer {
                                                         ^
/Users/Ievgenii_Mykhalevskyi/repos/source1/Experiences/Completion/Sources/UI/Scenes/Composition/ProfileCompletionReducer.swift:10:5: note: in expansion of macro 'Reducer' on struct 'Core' here
    @Reducer
    ^~~~~~~~
/Users/Ievgenii_Mykhalevskyi/repos/source1/Experiences/Completion/Sources/UI/Scenes/Composition/ProfileCompletionReducer.swift:10:5: note: in expansion of macro 'Reducer' on struct 'Core' here
    @Reducer
    ^~~~~~~~
/Users/Ievgenii_Mykhalevskyi/repos/source1/Experiences/Completion/Sources/UI/Scenes/Composition/ProfileCompletionReducer.swift:18:14: note: main actor-isolated instance method 'reduce(into:action:)' cannot satisfy nonisolated requirement
        func reduce(
             ^

Failed frontend command:


SwiftEmitModule normal arm64 Emitting\ module\ for\ CNFProfile (in target 'CNFProfile' from project 'AppSuite')

EmitSwiftModule normal arm64 (in target 'CNFProfile' from project 'AppSuite')
    cd /Users/Ievgenii_Mykhalevskyi/repos/source